--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         </section>
         <!-- What are we doing -->
         <section>
-            <h2 class="work-title">Чем мы занимаемся</h2>
+            <h2 class="work-tit">Чем мы занимаемся</h2>
             <ul class="list">
                 <li>
                     <img src="./images/img-a.jpeg" alt="планшет и клавиатура" width="370" />
